# capts-prizeops

./: .gitignore  README.md  pyproject.toml
.capt_state/: abstr_concepts.json
capts_prizeops/: __init__.py  cli.py
pipelines/: __init__.py  aimo_harness.py  conjecture_decomposer.py  counterexample_search.py  intake.py  lean_formalizer.py  literature_map.py  proof_auditor.py  solver_orchestrator.py  submission_packager.py
prizes/: aimo.yaml  arc.yaml  beal.yaml  clay_millennium.yaml  graph_bounties.yaml  prize_ledger.yaml
problems/aimo/: README.md
problems/arc/: README.md
problems/beal/: README.md
problems/clay/: README.md
problems/conway_99_graph/: README.md  sat_search_log.md
problems/erdos_gyarfas/: README.md
reports/: opportunity_rankings.md
reports/arena_runs/: README.md  aimo_bench_20260616_074702.json  aimo_bench_20260616_075020.json
reports/failure_museum/: README.md
reports/proof_attempts/: README.md
reports/proof_attempts/conway_10_3_0_1/: 20260616_074301.json
reports/proof_attempts/conway_99_14_1_2_pb/: 20260616_102156.json
reports/proof_attempts/erdos_gyarfas_n12_d3/: 20260616_082309.json
